# privacy-policy-scanner

./: README.md
backend/: README.md  app.py  prompt_templates.py  pyproject.toml  test_api.py  test_policy.txt
extension/: README.md  background.js  constants.js  contentScript.js  manifest.json  popup.css  popup.html  popup.js
