[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Malek Jerbi <malek.jerbi@gmail.Com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.54.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
black = "^24.10.0"
python-dotenv = "^1.0.1"
haystack-ai = "^2.6.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
